# ChatGPT-On-QQ

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  cqhttp.cpp  cqhttp.h
